[#64848482] Fix headline height on mobile for blog posts

--- a/frontend/app/styles/components/_pagination.scss
+++ b/frontend/app/styles/components/_pagination.scss
@@ -192,7 +192,8 @@ pagination {
           font-size: 18px;
           line-height: 1.1;
           height: auto;
-          overflow: visible;
+          overflow: hidden;
+          height: 88px;
         }
         .category {
           position: static;
